--- a/Content/app.css
+++ b/Content/app.css
@@ -1,12 +1,32 @@
-h1 {
-  font-family: 'Open Sans', 'sans-serif';
-}
-
 body {
+  font-family: 'Open Sans', 'sans-serif';
+  padding-top: 80px;
+}
+
+.navbar{
+  margin-bottom: 0px;
+  padding: 30px 15px;
+  transition: all 0.5s;
+  -webkit-transition: all 0.5s;
+}
+
+.navbar-inverse .navbar-nav>li>a{
+  color: #bbb;
+}
+
+.navbar img{
+  width: 70%;
+  height: 70%;
 
 }
 
-header, footer {
+.cbp-af-header-shrink{
+  padding-top: 5px;
+  padding-bottom: 5px;
+  opacity: 0.9;
+}
+
+footer {
   background-color: #333;
   color: #ddd;
   padding: 20px;
