--- a/Content/app.css
+++ b/Content/app.css
@@ -1,6 +1,23 @@
 body {
   font-family: 'Open Sans', 'sans-serif';
-  padding-top: 80px;
+  padding-top: 110px;
+}
+
+html, body{
+  height: 100%;
+}
+
+header{
+  display: block;
+  position: relative;
+  width: auto;
+  height: auto;
+  padding: 100px 0;
+  min-height: 100%;
+  background: no-repeat center center;
+  background-attachment: scroll;
+  background-color: #222;
+  background-size: cover;
 }
 
 .navbar{
@@ -10,20 +27,52 @@ body {
   -webkit-transition: all 0.5s;
 }
 
-.navbar-inverse .navbar-nav>li>a{
-  color: #bbb;
+@media (max-width: 400px) {
+  .navbar-header{
+    position: relative;
+  }
+  .navbar img{
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+    width: 70%;
+  }
 }
 
-.navbar img{
-  width: 70%;
-  height: 70%;
-
+.navbar-inverse .navbar-nav>li>a{
+  color: #bbb;
 }
 
 .cbp-af-header-shrink{
   padding-top: 5px;
   padding-bottom: 5px;
   opacity: 0.9;
+}
+
+.fill-screen{
+  background-size: cover;
+  background-position: center;
+}
+
+.content-filler{
+  min-height: 350px;
+}
+
+.fixed-attachment{
+  background-attachment: fixed;
+}
+
+@media (max-width: 1024px){
+  .fixed-attachment{
+    background-attachment: scroll;
+  }
+}
+
+.img-responsive{
+  margin: 0 auto;
+  border: 3px solid darkblue;
+  box-shadow: rgba(0,0,0,0.5) 10px 10px 60px;
 }
 
 footer {
